// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Movies 1`] = `
<div>
  <div
    class="colA"
  >
    <h2>
      Movies 
    </h2>
    <ul>
      <li>
        <span>
          Hello
        </span>
         
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-list "
          data-icon="list"
          data-prefix="fas"
          data-testid="context-menu-open"
          focusable="false"
          role="img"
          style="cursor: context-menu;"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M80 368H16a16 16 0 0 0-16 16v64a16 16 0 0 0 16 16h64a16 16 0 0 0 16-16v-64a16 16 0 0 0-16-16zm0-320H16A16 16 0 0 0 0 64v64a16 16 0 0 0 16 16h64a16 16 0 0 0 16-16V64a16 16 0 0 0-16-16zm0 160H16a16 16 0 0 0-16 16v64a16 16 0 0 0 16 16h64a16 16 0 0 0 16-16v-64a16 16 0 0 0-16-16zm416 176H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-320H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16zm0 160H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16z"
            fill="currentColor"
          />
        </svg>
         
      </li>
    </ul>
  </div>
</div>
`;

exports[`NextEpisodeAirs > works 1`] = `
<div>
  <small>
    Episode 2 "EP2" airs on 24/04/2020
     
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-73o1y3-MuiTypography-root-MuiLink-root"
      data-discover="true"
      href="/select/10000/season/1/episode/2/options"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-search "
        data-icon="search"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
        />
      </svg>
    </a>
  </small>
  ,
</div>
`;

exports[`Progress > complex 1`] = `<div />`;

exports[`Progress > complex 2`] = `
<div>
  <progress
    title="50% (Unknown time remaining)"
    value="0.5"
  />
</div>
`;

exports[`Progress > complex 3`] = `
<div>
  <progress
    title="75% (Unknown time remaining)"
    value="0.75"
  />
</div>
`;

exports[`Progress > simple 1`] = `<div />`;

exports[`Progress > simple 2`] = `
<div>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-check-circle "
    data-icon="check-circle"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Progress > simple 3`] = `
<div>
  <progress
    title="50% (6 minutes remaining)"
    value="0.5"
  />
</div>
`;

exports[`TVShows 1`] = `
<div>
  <div>
    <div
      class="colB"
    >
      <h2>
        TV Shows 
      </h2>
      <div>
        <h3>
          Title
           
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-list "
            data-icon="list"
            data-prefix="fas"
            data-testid="context-menu-open"
            focusable="false"
            role="img"
            style="cursor: context-menu;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M80 368H16a16 16 0 0 0-16 16v64a16 16 0 0 0 16 16h64a16 16 0 0 0 16-16v-64a16 16 0 0 0-16-16zm0-320H16A16 16 0 0 0 0 64v64a16 16 0 0 0 16 16h64a16 16 0 0 0 16-16V64a16 16 0 0 0-16-16zm0 160H16a16 16 0 0 0-16 16v64a16 16 0 0 0 16 16h64a16 16 0 0 0 16-16v-64a16 16 0 0 0-16-16zm416 176H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-320H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16zm0 160H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16z"
              fill="currentColor"
            />
          </svg>
        </h3>
        <div
          class="Collapsible"
        >
          <span
            aria-controls="collapsible-content-tv-1-season-1"
            aria-disabled="false"
            aria-expanded="true"
            class="Collapsible__trigger is-open"
            id="collapsible-trigger-tv-1-season-1"
            role="button"
          >
            <h4>
              Season 
              1
               
               
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-73o1y3-MuiTypography-root-MuiLink-root"
                data-discover="true"
                href="/select/1/season/1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-search "
                  data-icon="search"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    fill="currentColor"
                  />
                </svg>
              </a>
               
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-caret-up fa-2x "
                data-icon="caret-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style="transform-origin: 0.3125em 0.625em; cursor: pointer;"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(160 256)"
                >
                  <g
                    transform="translate(0, 64)  scale(1, 1)  rotate(0 0 0)"
                  >
                    <path
                      d="M288.662 352H31.338c-17.818 0-26.741-21.543-14.142-34.142l128.662-128.662c7.81-7.81 20.474-7.81 28.284 0l128.662 128.662c12.6 12.599 3.676 34.142-14.142 34.142z"
                      fill="currentColor"
                      transform="translate(-160 -256)"
                    />
                  </g>
                </g>
              </svg>
            </h4>
          </span>
          <div
            aria-labelledby="collapsible-trigger-tv-1-season-1"
            class="Collapsible__contentOuter"
            id="collapsible-content-tv-1-season-1"
            role="region"
            style="height: auto; transition: none; overflow: hidden;"
          >
            <div
              class="Collapsible__contentInner"
            >
              <ol />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
